fix: verifiedcontainer under z-index of lazyImageLoader component

--- a/frontend/src/pages/Overview/OverviewPage.css
+++ b/frontend/src/pages/Overview/OverviewPage.css
@@ -116,6 +116,7 @@
                 
                 cursor: pointer;
                 transition: all 200ms ease-in-out;
+                z-index: 100;
             }
                 .list-module__item-menu--verifiedcontainer:hover svg{
                     scale: 1.1;
